--- a/DGSConsole/DGSConsole.Agent/Views/Shared/_Layout.cshtml
+++ b/DGSConsole/DGSConsole.Agent/Views/Shared/_Layout.cshtml
@@ -6,7 +6,10 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <script src="~/Scripts/angular.min.js"></script>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/app/angular")
+    @Scripts.Render("~/bundles/RSignal")
+  
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -37,9 +40,11 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    <script src="~/core/app.js"></script>
+    @Scripts.Render("~/bundles/jquerycommon")
+    @Scripts.Render("~/bundles/app/libs")
+    @Scripts.Render("~/bundles/app/core")
     @RenderSection("scripts", required: false)
+
+    
 </body>
 </html>
