--- a/DGSConsole/DGSConsole.Agent/Content/Site.css
+++ b/DGSConsole/DGSConsole.Agent/Content/Site.css
@@ -1752,7 +1752,8 @@ li.active-column {
     table-layout: fixed;
     width: 100%;
 }
-.fixed-table tr {
+
+    .fixed-table tr {
         -webkit-transition: background 0.3s linear 0s;
         -moz-transition: background 0.3s linear 0s;
         -ms-transition: background 0.3s linear 0s;
@@ -1760,20 +1761,22 @@ li.active-column {
         transition: background 0.3s linear 0s;
         background-color: #fff;
     }
-.fixed-table  th {
-    background-color: #1e1e2d;
-    color: #fff !important;
-    cursor: pointer;
-    font-size: 12px;
-    font-weight: normal;
-    line-height: normal;
-    text-indent: 8px;
-    vertical-align: top;
-    border-top: 1px solid #ccc;
-    padding: 10px;
-    border-top: 1px solid #ccc;
-    width: 200px;
-}
+
+    .fixed-table th {
+        background-color: #1e1e2d;
+        color: #fff !important;
+        cursor: pointer;
+        font-size: 12px;
+        font-weight: normal;
+        line-height: normal;
+        text-indent: 8px;
+        vertical-align: top;
+        border-top: 1px solid #ccc;
+        padding: 10px;
+        border-top: 1px solid #ccc;
+        width: 200px;
+    }
+
     .fixed-table td {
         vertical-align: top;
         border-top: 1px solid #ccc;
@@ -1815,19 +1818,106 @@ li.active-column {
     overflow-y: visible;
     margin-left: 600px;
 }
-.fixed-inner::-webkit-scrollbar {
-   width: 0.4em;
-   height:0.4em;
-}
-.fixed-inner::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-}
-.fixed-inner::-webkit-scrollbar-thumb {
- background-color: #b37e7e;
- outline: 1px solid slategrey;
-}
+
+    .fixed-inner::-webkit-scrollbar {
+        width: 0.4em;
+        height: 0.4em;
+    }
+
+    .fixed-inner::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    }
+
+    .fixed-inner::-webkit-scrollbar-thumb {
+        background-color: #b37e7e;
+        outline: 1px solid slategrey;
+    }
+
 .control-label {
     padding-top: 8px;
     font-weight: normal;
     font-size: 12px !important;
 }
+
+.chat_group {
+    border-left: 1px solid #d0d0d0;
+    border-right: 1px solid #d0d0d0;
+    border-bottom: 1px solid #d0d0d0;
+    border-top: 0;
+    height: 400px;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+
+.user_list {
+    padding: 0;
+    margin: 0;
+}
+
+    .user_list li {
+        display: block;
+        padding: 5px 0;
+        border-bottom: 1px solid #d0d0d0;
+    }
+
+        .user_list li:hover {
+            background: #d0d0d0;
+            color: #fff;
+            cursor: pointer;
+        }
+
+/*li.chinhtoi*/
+li.chat_bg {
+    background: #fbeeee;
+}
+
+li.new a {
+    position: relative;
+    padding-right: 30px;
+}
+
+    li.new a:before {
+        content: "(*)";
+        color: #ff0000;
+        position: absolute;
+        right: 0;
+        margin-right: 10px;
+        display: block;
+    }
+
+.left-chat-area .time-date {
+    float: left !important;
+    font-size: 10px;
+}
+
+.right-chat-area .time-date {
+    float: right !important;
+    font-size: 10px;
+}
+
+.right-chat-area, .left-chat-area {
+    width: 100%;
+    float: left;
+}
+
+.chat li.right .chat-body {
+    margin-right: 60px;
+}
+
+
+.chat li .chat-body p {
+    margin: 0;
+    color: #777777;
+}
+
+.chat {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+    .chat li {
+        margin-bottom: 10px;
+        padding-bottom: 5px;
+        /* border-bottom: 1px dotted #B3A9A9;*/
+    }
