--- a/DGSConsole/SignalRChat/Views/Shared/_Layout.cshtml
+++ b/DGSConsole/SignalRChat/Views/Shared/_Layout.cshtml
@@ -7,6 +7,9 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <script src="~/Scripts/angular.min.js"></script>
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/app/angular")
+    @Scripts.Render("~/bundles/RSignal")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -38,12 +41,13 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-
+   
+    @Scripts.Render("~/bundles/jquerycommon")
+    @Scripts.Render("~/bundles/app/libs")
+    @Scripts.Render("~/bundles/app/core")
+    @RenderSection("scripts", required: false)
     <script src="~/Scripts/jquery.signalR-2.2.1.min.js"></script>
-    @*<script src="~/signalr/hubs" type="text/javascript"></script>*@
-    <script src="~/core/app.js"></script>
+  
     @RenderSection("scripts", required: false)
 </body>
 </html>
