--- a/DGSConsole/SignalRChat/Views/Shared/_Layout.cshtml
+++ b/DGSConsole/SignalRChat/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <script src="~/Scripts/angular.min.js"></script>
+    @*<script src="~/Scripts/angular.min.js"></script>*@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/app/angular")
     @Scripts.Render("~/bundles/RSignal")
