--- a/DGSConsole/SignalRChat/Views/Shared/_Layout.cshtml
+++ b/DGSConsole/SignalRChat/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
    
     @Scripts.Render("~/bundles/jquerycommon")
     <script src="~/Scripts/jquery.signalR-2.2.1.min.js"></script>
+    <script src="~/core/websocketConnection.js"></script>
     @Scripts.Render("~/bundles/app/libs")
     @Scripts.Render("~/bundles/app/core")
     @RenderSection("scripts", required: false)
