--- a/DGSConsole/SignalRChat/Views/Home/ChatRoom.cshtml
+++ b/DGSConsole/SignalRChat/Views/Home/ChatRoom.cshtml
@@ -1,4 +1,21 @@
-﻿
+﻿@using System.Security.Claims;
+@using System.Linq;
+@{
+    ViewBag.Title = "List User";
+
+    string email = "", name = "";
+
+    if (User.Identity.IsAuthenticated)
+    {
+        var user = User as ClaimsPrincipal;
+        var claims = user.Claims.ToList();
+        email = User.Identity.Name;
+        name = claims.Where(x => x.Type.Equals("Name")).FirstOrDefault().Value;
+    }
+}
+<script type='text/javascript'>
+    window.emailID = '@email';
+</script>
 @{
     ViewBag.Title = "About";
 }
@@ -36,7 +53,7 @@
                                 </div>
                                 <div class="form-group">
                                     <div class="col-sm-10">
-                                        <button type="submit" class="btn btn-default send_message">Send</button>
+                                        <button type="submit" class="btn btn-default send_message" ng-click="sendMessage()">Send</button>
                                     </div>
                                 </div>
                             </div>
