--- a/DGSConsole/SignalRChat/Views/Home/List.cshtml
+++ b/DGSConsole/SignalRChat/Views/Home/List.cshtml
@@ -13,65 +13,108 @@
         name = claims.Where(x => x.Type.Equals("Name")).FirstOrDefault().Value;
     }
 }
+
 <script type='text/javascript'>
     window.emailID = '@email';
 </script>
 
 
- <h2>@ViewBag.Title</h2>
- <h3>@ViewBag.Message</h3>
+<h2>@ViewBag.Title</h2>
+<h3>@ViewBag.Message</h3>
 
- <div >
-     <div data-ng-controller="SuperAdminController" class="container">       
- 
-         <div class="row">
-             @*<button id="loadUser" class="btn btn-info">Load Users</button></br></br>*@             
-             <div class="user-table" ng-show="dataLoaded">
-                 <table id="logTable" class="data-table" st-table="userList" st-safe-src="userDisplayList">
-                     <thead>
-                         <tr>
-                             <th ng-repeat="col in columns" ng-bind="col.header"></th>
-                             <th>Action</th>
-                         </tr>
-                     </thead>
-                     <tbody>
-                         <tr dir-paginate="row in userDisplayList | itemsPerPage:options.pagesize" current-page="options.page">
-                             <td ng-repeat="col in columns"  ng-bind="row[col.field]"></td>
-                             <td>
-                                 <button type="button" id="btnEdit-{{$index}}" data-ng-click="gotoChatroom()" class="btn btn-primary"><i class="fa fa-pencil-square-o fa-fw"></i>Chat</button>
-                                 <button type="button" id="btnDelete-{{$index}}" data-ng-click="gotoCall()"   class="btn btn-success"><i class="fa fa-trash-o fa-fw"></i>Call</button>
-                                 <button type="button" id="btnDelete-{{$index}}" data-ng-click="gotoViewscreen()" class="btn btn-call"><i class="fa fa-trash-o fa-fw"></i>View Screen</button>
-                             </td>
-                         </tr>
-                         <tr ng-show="userDisplayList.length<=0">
-                             <td colspan="20">No record found</td>
-                         </tr>
-                     </tbody>
-                 </table>
- 
-                
-             </div>
-             <div >
-                 <div class="number-pagination">
-                     <dir-pagination-controls max-size="5"
-                                              direction-links="true"
-                                              auto-hide="false"
-                                              boundary-links="true">
-                     </dir-pagination-controls>
- 
-                 </div>
-                 <div class="Page-size">
-                     <div class="pagecount-left">Page size</div>
-                     <div class="pagecount-right">
-                         <select style="display:block" ng-model="options.pagesize"
-                                 ng-options="obj as obj for obj in options.pagingOptions" />
-                     </div>
-                 </div>
-             </div>
-         </div>
-     </div>
- </div> 
+<div>
+    <div data-ng-controller="SuperAdminController" class="container">
+
+        <div class="row">
+            @*<button id="loadUser" class="btn btn-info">Load Users</button></br></br>*@
+            <div class="user-table" ng-show="dataLoaded">
+                <table id="logTable" class="data-table" st-table="userList" st-safe-src="userDisplayList">
+                    <thead>
+                        <tr>
+                            <th ng-repeat="col in columns" ng-bind="col.header"></th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr dir-paginate="row in userDisplayList | itemsPerPage:options.pagesize" current-page="options.page">
+                            <td ng-repeat="col in columns" ng-bind="row[col.field]"></td>
+                            <td>
+                                <button type="button" id="btnEdit-{{$index}}" data-ng-click="gotoChatroom($index)" data-toggle="modal" data-target="#myModal" class="btn btn-primary" ng-disabled="disableElement[$index]"><i class="fa fa-pencil-square-o fa-fw"></i>Chat</button>
+                                <button type="button" id="btnDelete-{{$index}}" data-ng-click="gotoCall()" class="btn btn-success" ng-disabled="disableElement[$index]"><i class="fa fa-trash-o fa-fw"></i>Call</button>
+                                <button type="button" id="btnDelete-{{$index}}" data-ng-click="gotoViewscreen()" class="btn btn-call" ng-disabled="disableElement[$index]"><i class="fa fa-trash-o fa-fw"></i>View Screen</button>
+                            </td>
+                        </tr>
+                        <tr ng-show="userDisplayList.length<=0">
+                            <td colspan="20">No record found</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+
+            </div>
+
+            <div class="modal fade" id="myModal" role="dialog" data-ng-controller="chatController">
+                <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Chat Box</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="menu">
+                                <div class="back"><i class="fa fa-chevron-left"></i> <img src="http://i.imgur.com/DY6gND0.png" draggable="false" /></div>
+                                <div class="name">{{userTo}}</div>
+                                <div class="last">18:09</div>
+                            </div>
+                            <ol class="chat">                              
+                           
+                            </ol>
+                            <div class="row">
+                                <input id="message" class="col-sm-4 textarea" type="text" placeholder="Type here!"  />
+                                <div class="emojis"> </div>
+                            </div>
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="number-pagination">
+                <dir-pagination-controls max-size="5"
+                                         direction-links="true"
+                                         auto-hide="false"
+                                         boundary-links="true">
+                </dir-pagination-controls>
+
+            </div>
+            <div class="Page-size">
+                <div class="pagecount-left">Page size</div>
+                <div class="pagecount-right">
+                    <select style="display:block" ng-model="options.pagesize"
+                            ng-options="obj as obj for obj in options.pagingOptions" />
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
 @section scripts {
-<script src="~/signalr/hubs"></script>
-<script src="~/core/signalR/hubProvider.js"></script>    
+    <script src="~/signalr/hubs"></script>
+    <script src="~/core/signalR/hubProvider.js"></script>
+    <script>
+        var chat = $.connection.chatHub;
+        function onConnected(model) {
+            return Object.keys(model).map((i) => i + '=' + model[i]).join('&');
+        }
+        chat.connection.qs = onConnected({
+            Name: '@name', Email: '@email', Status: 'Login'
+        })
+    </script>
 }
