--- a/DGSConsole/SignalRChat/Views/Home/About.cshtml
+++ b/DGSConsole/SignalRChat/Views/Home/About.cshtml
@@ -467,7 +467,7 @@
                     //**********************
 
                     //getting local video stream
-                    navigator.webkitGetUserMedia({ video: false, audio: true }, function (myStream) {
+                    navigator.webkitGetUserMedia({ video: true, audio: true }, function (myStream) {
                         stream = myStream;
 
                         //displaying local video stream on the page
