--- a/DGSConsole/SignalRChat/Views/Home/List.cshtml
+++ b/DGSConsole/SignalRChat/Views/Home/List.cshtml
@@ -80,12 +80,15 @@
                 <tbody>
                     <tr dir-paginate="row in userDisplayList | itemsPerPage:options.pagesize" current-page="options.page">
                         <td ng-repeat="col in columns" ng-bind="row[col.field]"></td>
-
+                     
+                       
                         <td>
-                            <button type="button" id="btnEdit-{{$index}}" data-ng-click="gotoChatroom($index)" data-toggle="modal" data-target="#myModal" class="btn btn-success" ng-disabled="disableControl(row['Status'])">Chat <span class="badge">{{chatVal}}</span></button>
+                            <button type="button" id="btnEdit-{{$index}}" data-ng-click="gotoChatroom($index)" data-toggle="modal" 
+                                    data-target="#myModal" class="btn btn-success" ng-disabled="disableElement[$index]">Chat
+                            <span class="badge-custom badge-custom-success">{{chatVal[$index]}}</span></button>
                             <div class="btn-group">
-                                <button type="button" id="btnCall-{{$index}}" ng-disabled="disableControl(row['Status'])" data-ng-click="gotoCall(row)" class="btn btn-primary" style="padding-left:5px !important"><i class="glyphicon glyphicon-earphone "></i> Call</button>
-                                <button type="button" id="btnCall-{{$index}}" ng-disabled="disableControl(row['Status'])" data-ng-click="gotoVideoCall(row)" class="btn btn-warning" style="padding-left:5px !important"><i class="glyphicon glyphicon-facetime-video"></i> Video Call</button>
+                                <button type="button" id="btnCall-{{$index}}" ng-disabled="disableElement[$index]" data-ng-click="gotoCall(row)" class="btn btn-primary" style="padding-left:5px !important"><i class="glyphicon glyphicon-earphone "></i> Call</button>
+                                <button type="button" id="btnCall-{{$index}}" ng-disabled="disableElement[$index]" data-ng-click="gotoVideoCall(row)" class="btn btn-warning" style="padding-left:5px !important"><i class="glyphicon glyphicon-facetime-video"></i> Video Call</button>
                                 <button type="button" id="btnDisconnectCall-{{$index}}" ng-disabled="disableCall" data-ng-click="endCall(row)" class="btn btn-danger" style="padding-left:5px !important"><i class="glyphicon glyphicon-remove" style="padding-left:5px !important"></i> End Call</button>
                             </div>
 
@@ -113,14 +116,15 @@
                     </div>
                     <div class="modal-body">
                         <div class="menu">
+                            @*added*@
                             <div class="back"><i class="fa fa-chevron-left"></i> <img src="http://i.imgur.com/DY6gND0.png" draggable="false" /></div>
-                            <div class="name">{{userTo}}</div>
+                            <div class="name">{{receiverName}}</div>
                             <div class="last">18:09</div>
                         </div>
                         <ol class="chat" style="overflow-y: auto;max-height: 300px;"></ol>
                         <div class="row">
-                            <input id="message" class="col-sm-4 textarea" type="text" placeholder="Type here!" />
-                            <div class="emojis"> </div>
+                            <input id="message" class="col-sm-4 textarea" type="text" placeholder="Type here!" />                           
+                            <div class="emojis"></div><button type="submit" class="emojis btn" data-ng-click="sendMessage()"></button>
                         </div>
 
                     </div>
