--- a/DGSConsole/SignalRChat/Views/Home/List.cshtml
+++ b/DGSConsole/SignalRChat/Views/Home/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Security.Claims;
 @using System.Linq;
 @{
-    ViewBag.Title = "List User";
+    ViewBag.Title = "User List";
 
     string email = "", name = "";
 
