--- a/DGSConsole/SignalRChat/Views/Shared/_Layout-Mizu.cshtml
+++ b/DGSConsole/SignalRChat/Views/Shared/_Layout-Mizu.cshtml
@@ -14,7 +14,7 @@
    
     <script src="~/Scripts/Mizutech/js/techdemo_example/jquery-1.9.1.min.js"></script>
 
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/css-Mizu")
     @Scripts.Render("~/bundles/modernizr")
     <script src="~/Scripts/angular.min.js"></script>
     @*<script src="~/Scripts/Mizutech/webphone_api.js"></script>*@
