--- a/DGSConsole/SignalRChat/Views/Home/List.cshtml
+++ b/DGSConsole/SignalRChat/Views/Home/List.cshtml
@@ -119,7 +119,7 @@
 <h2>All Users</h2>
 
 <div data-ng-controller="SuperAdminController" class="container">
-
+    <canvas id="canvas" width="640" height="480" style="display:none"></canvas>
     <div id="callPage" class="call-page drag" ng-show="isVideo" ng-cloak style="opacity: 1;z-index: 99999;">
         <video id="localVideo" autoplay></video>
         <video id="remoteVideo" autoplay>          
@@ -129,7 +129,8 @@
                 <button type="button" class="btn btn-sm" id="play-pause" ng-click="enablePause=!enablePause;" ng-disabled="!enablePause"  tooltip="Resume Video"><i class="glyphicon glyphicon-play"></i></button>
                 <button type="button" class="btn btn-sm" id="pause-play" ng-click="enablePause=!enablePause;" ng-disabled="enablePause" tooltip="Pause Video"><i class="glyphicon glyphicon-pause"></i></button>
                 <button type="button" class="btn btn-sm btn-warning" id="mutebtn" tooltip="Mute" ng-click="showMute=!showMute;" ng-disabled="!showMute"><i class="glyphicon glyphicon-volume-up"></i></button>      
-                <button type="button" class="btn btn-sm btn-success" id="unmutebtn" tooltip="Un Mute" ng-click="showMute=!showMute;" ng-disabled="showMute"><i class="glyphicon glyphicon-volume-off"></i></button>            
+                <button type="button" class="btn btn-sm btn-success" id="unmutebtn" tooltip="Un Mute" ng-click="showMute=!showMute;" ng-disabled="showMute"><i class="glyphicon glyphicon-volume-off"></i></button>
+                <button type="button" class="btn btn-sm btn-warning" id="capturebtn" tooltip="Capture Screen"><i class="glyphicon glyphicon-screenshot"></i></button>           
             </div>
             <button type="button" style="position: absolute;bottom: 7px;right: 0px;" class="btn btn-sm btn-danger pull-right" id="endCallbtn" tooltip="End Call"  data-ng-click="endCall()">End Call <i class="glyphicon glyphicon-remove" style="padding-right:1px !important"></i></button>  
         </div>
@@ -156,7 +157,7 @@
                             <span class="badge-custom badge-custom-success">{{chatVal[$index]}}</span></button>
                             <div class="btn-group">
                                 <button type="button" id="btnCall-{{$index}}" ng-disabled="disableControl(row['Status'])" data-ng-click="gotoCall(row)" class="btn btn-primary" style="padding-left:5px !important"><i class="glyphicon glyphicon-earphone "></i> Call</button>
-                                <button type="button" id="btnDisconnectCall-{{$index}}" ng-show="disableCall" data-ng-click="endCall()" class="btn btn-danger" style="padding-left:5px !important"><i class="glyphicon glyphicon-remove" style="padding-left:5px !important"></i> End Call</button>
+                                <button type="button" id="btnDisconnectCall-{{$index}}" ng-disabled="disableCall" data-ng-click="endCall()" class="btn btn-danger" style="padding-left:5px !important"><i class="glyphicon glyphicon-remove" style="padding-left:5px !important"></i> End Call</button>
                                 <button type="button" id="btnCall-{{$index}}" ng-disabled="disableControl(row['Status'])" data-ng-click="gotoVideoCall(row)" class="btn btn-warning" style="padding-left:5px !important"><i class="glyphicon glyphicon-facetime-video"></i> Video Call</button>
                             </div>
 
